--- a/nailgun/static/templates/cluster/verify_network_control.html
+++ b/nailgun/static/templates/cluster/verify_network_control.html
@@ -50,7 +50,8 @@
               <thead><tr><th>Node Name</th><th>Node MAC address</th><th>Node Interface</th><th>Expected VLAN (not received)</th></tr></thead>
               <tbody>
                 <% _.each(task.get('result'), function(node) { %>
-                  <tr><td><%- node.name ? node.name : 'N/A' %></td><td><%- node.mac ? node.mac : 'N/A' %></td><td><%-node.interface %></td><td><%-node.absent_vlans %></td></tr>
+                  <% var absentVlans = _.map(node.absent_vlans, function(vlan) {return vlan || 'untagged';}) %>
+                  <tr><td><%- node.name ? node.name : 'N/A' %></td><td><%- node.mac ? node.mac : 'N/A' %></td><td><%- node.interface %></td><td><%- absentVlans %></td></tr>
                 <% }) %>
               </tbody>
             </table>
