--- a/nailgun/static/less/bootstrap.less
+++ b/nailgun/static/less/bootstrap.less
@@ -1,49 +1,62 @@
+/*!
+ * Bootstrap v2.3.2
+ *
+ * Copyright 2013 Twitter, Inc
+ * Licensed under the Apache License v2.0
+ * http://www.apache.org/licenses/LICENSE-2.0
+ *
+ * Designed and built with all the love in the world by @mdo and @fat.
+ */
+
 // Core variables and mixins
-@import "bootstrap/variables.less";
+@import "bootstrap/variables.less"; // Modify this for custom colors, font-sizes, etc
 @import "bootstrap/mixins.less";
 
-// Reset
-@import "bootstrap/normalize.less";
-@import "bootstrap/print.less";
+// CSS Reset
+@import "bootstrap/reset.less";
 
-// Core CSS
+// Grid system and page structure
 @import "bootstrap/scaffolding.less";
-@import "bootstrap/type.less";
-@import "bootstrap/code";
-@import "bootstrap/grid";
-@import "bootstrap/tables.less";
-@import "bootstrap/forms";
-@import "bootstrap/buttons";
+@import "bootstrap/grid.less";
+@import "bootstrap/layouts.less";
 
-// Components
-@import "bootstrap/component-animations";
-@import "bootstrap/glyphicons";
-@import "bootstrap/dropdowns";
-@import "bootstrap/button-groups";
-@import "bootstrap/input-groups";
+// Base CSS
+@import "bootstrap/type.less";
+@import "bootstrap/code.less";
+@import "bootstrap/forms.less";
+@import "bootstrap/tables.less";
+
+// Components: common
+@import "bootstrap/dropdowns.less";
+@import "bootstrap/wells.less";
+@import "bootstrap/component-animations.less";
+@import "bootstrap/close.less";
+
+// Components: Buttons & Alerts
+@import "bootstrap/buttons.less";
+@import "bootstrap/button-groups.less";
+@import "bootstrap/alerts.less"; // Note: alerts share common CSS with buttons and thus have styles in buttons.less
+
+// Components: Nav
 @import "bootstrap/navs.less";
 @import "bootstrap/navbar.less";
-@import "bootstrap/breadcrumbs";
+@import "bootstrap/breadcrumbs.less";
 @import "bootstrap/pagination.less";
 @import "bootstrap/pager.less";
-@import "bootstrap/labels";
-@import "bootstrap/badges";
-@import "bootstrap/jumbotron";
-@import "bootstrap/thumbnails.less";
-@import "bootstrap/alerts";
-@import "bootstrap/progress-bars.less";
-@import "bootstrap/media.less";
-@import "bootstrap/list-group.less";
-@import "bootstrap/panels.less";
-@import "bootstrap/wells.less";
-@import "bootstrap/close";
 
-// Components w/ JavaScript
+// Components: Popovers
 @import "bootstrap/modals.less";
 @import "bootstrap/tooltip.less";
 @import "bootstrap/popovers.less";
-@import "bootstrap/carousel";
+
+// Components: Misc
+@import "bootstrap/thumbnails.less";
+@import "bootstrap/media.less";
+@import "bootstrap/labels-badges.less";
+@import "bootstrap/progress-bars.less";
+@import "bootstrap/accordion.less";
+@import "bootstrap/carousel.less";
+@import "bootstrap/hero-unit.less";
 
 // Utility classes
-@import "bootstrap/utilities.less";
-@import "bootstrap/responsive-utilities.less";
+@import "bootstrap/utilities.less"; // Has to be last to override when necessary
