--- a/nailgun/static/css/main.css
+++ b/nailgun/static/css/main.css
@@ -1,6 +1,3 @@
-@import 'fonticon.css';
-@import 'bootstrap.css';
-
 html {
   background-color: #39444F;
   background-image: url(../img/bg-main.png);
@@ -1112,6 +1109,7 @@ label.error {
   font-size: 110px;
   color: #909EAE;
   text-shadow: 0 1px 0 rgba(0, 0, 0, 0.6);
+  display: inline;
 }
 
 .create-cluster:hover > .add-icon > .icon-create {
@@ -1438,6 +1436,7 @@ label.error {
   width: 100%;
   height: 90px;
   background: url(../img/cloud-loader.gif) no-repeat top center;
+  font-size: 0;
 }
 
 .loading.layout-loaded {
