--- a/nailgun/static/templates/dialogs/create_cluster_wizard/name_and_release.html
+++ b/nailgun/static/templates/dialogs/create_cluster_wizard/name_and_release.html
@@ -1,14 +1,14 @@
 <form class="form-horizontal create-cluster-form" onsubmit="return false">
   <fieldset>
     <div class="control-group">
-      <label class="control-label" data-i18n="dialog.create_cluster_wizard.name_release.name"></label>
+      <label class="control-label" data-i18n="dialog.create_cluster_wizard.nameandrelease.name"></label>
       <div class="controls">
         <input type="text" class="input-large" name="name" maxlength="50" autofocus />
         <span class="help-inline"></span>
       </div>
     </div>
     <div class="control-group">
-      <label class="control-label" data-i18n="dialog.create_cluster_wizard.name_release.release_label"></label>
+      <label class="control-label" data-i18n="dialog.create_cluster_wizard.nameandrelease.release_label"></label>
       <div class="controls">
         <select name="release"></select>
       </div>
@@ -16,7 +16,3 @@
     <div class="release-description help-block"></div>
   </fieldset>
 </form>
-
-<div class="credentials rhel-license hide"></div>
-<div class="alert alert-info rhel-license hide" data-i18n="dialog.create_cluster_wizard.name_release.red_hat_info">
-</div>
