--- a/nailgun/static/templates/cluster/node_interface.html
+++ b/nailgun/static/templates/cluster/node_interface.html
@@ -12,7 +12,8 @@
       <div class="logical-network-group">
         <% ifc.get('assigned_networks').each(function(network) { %>
           <% if (network.get('name') != 'floating') { %>
-            </div><div class="logical-network-group <%- (_.contains(ifc.get('allowed_networks').invoke('get', 'name'), 'fuelweb_admin') && network.get('name') == 'fuelweb_admin') ? 'disabled' : '' %>">
+            <% var nonDraggable = network.get('name') == 'fuelweb_admin' %>
+            </div><div class="logical-network-group <%= nonDraggable ? 'disabled' : '' %>">
           <% } %>
           <div class="logical-network-item" data-name="<%- network.get('name') %>">
             <div class="name"><%- $.t('network.' + network.get('name'), {defaultValue: network.get('name')}) %></div>
